[package]
name = "noder"
version = "0.0.0"
authors = ["Roee Shapira <roy.shap1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
