[package]
name = "noder"
version = "0.0.0"
authors = ["Roee Shapira <roy.shap1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
bytes = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
flate2 = "1.0"
tar = "0.4"
chrono = "0.4"
log = "0.4.0"
env_logger = "0.8.2"
clap = { version ="2.33", features = ["yaml"] }
dialoguer = "0.7.1"
